@@ -1,3 +1,8 @@
+2012-10-05 dschulze@adobe.com
+	'alpha' and 'luminance' keywords on 'mask' override 'mask-type' definition.
+	Make 'mask-type' presentation attribute.
+	Define that 'mask-*' properties have no affect on referenced 'mask' elements.
+
 2012-10-02 dschulze@adobe.com
 	Added 'alpha' and 'luminance' keywords to mask reference syntax.
 	Specified how mask images of different masking types are combined.
